name:                yabi
version:             0.1.0.0
synopsis:            Yet Another Brainfuck Interpreter
license:             MIT
license-file:        LICENSE
author:              Tenor Biel
maintainer:          tenorbiel@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Yabi.Types,
                       Yabi.Engine,
                       Yabi.Parser,
                       Yabi
  build-depends:       base >=4.7 && <4.8,
                       mtl >=2.2 && <2.3,
                       lens >=4.7 && <4.8,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2,
                       bytestring >=0.10.4 && <0.10.5
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable yabi
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base,
                       mtl,
                       containers,
                       parsec,
                       yabi
  hs-source-dirs:      src
  default-language:    Haskell2010
